--- a/pallets/liquidity-proxy/Cargo.toml
+++ b/pallets/liquidity-proxy/Cargo.toml
@@ -45,6 +45,8 @@ std = [
     'tokens/std',
     'traits/std',
     'dex-manager/std',
+    'mock-liquidity-source/std',
+    'dex-api/std',
     'assets/std',
     'permissions/std',
 ]
