--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -37,6 +37,7 @@ sp-offchain = { git = "https://github.com/paritytech/substrate", default-feature
 sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
+sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 
 frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
@@ -45,7 +46,11 @@ pallet-balances = { git = "https://github.com/paritytech/substrate", default-fea
 pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 pallet-sudo = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-pallet-transaction-payment = { git = "https://github.com/eadventurous/pallet-transaction-payment", default-features = false, branch = "rococo-branch"}
+pallet-transaction-payment = { git = "https://github.com/soramitsu/SoraNeo-frame-pallets", default-features = false, branch = "rococo-branch"}
+pallet-staking = { git = "https://github.com/soramitsu/SoraNeo-frame-pallets", default-features = false, branch = "rococo-branch"}
+pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false, features = ["historical"], branch = "rococo-branch" }
+pallet-babe = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
+pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 
 # Cumulus dependencies
 cumulus-runtime = { git = "https://github.com/paritytech/cumulus",  default-features = false, rev = '96da14c14fb785e106bb89a18c9dedaf2f789d2c' }
@@ -82,11 +87,14 @@ std = [
 	"frame-support/std",
 	"frame-executive/std",
 	"frame-system/std",
+	"pallet-babe/std",
 	"pallet-balances/std",
 	"pallet-randomness-collective-flip/std",
 	"pallet-timestamp/std",
 	"pallet-sudo/std",
+	"pallet-session/std",
 	"pallet-transaction-payment/std",
+	"pallet-staking/std",
 	"parachain-info/std",
 	"cumulus-runtime/std",
 	"cumulus-parachain-upgrade/std",
