--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -20,15 +20,20 @@ codec = { package = 'parity-scale-codec', version = '1.0.0' }
 structopt = "0.3.3"
 ansi_term = "0.12.1"
 serde = { version = "1.0.101", features = ["derive"] }
-common = { path = "../common", default-features = false }
+common = { path = "../common" }
+jsonrpc-core = "14.0.3"
+dex-api-rpc = { path = "../pallets/dex-api/rpc" }
+dex-manager-rpc = { path = "../pallets/dex-manager/rpc" }
 
 # Parachain dependencies
 parachain-runtime = { path = "../runtime" }
 
 # Substrate dependencies
-sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false,  branch = "rococo-branch" }
 sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
 sp-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
+sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
+sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
 sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
 sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
 sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
@@ -41,6 +46,8 @@ sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch 
 sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
 sc-network = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
 sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", version = "0.8.0-rc5" }
+sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
+sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
 sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
 sp-trie = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
 sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
