--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -15,6 +15,9 @@ parachain-info = { path = "../pallets/parachain-info", default-features = false}
 permissions = { path = "../pallets/permissions", default-features = false}
 cumulus-token-dealer = { path = "../pallets/token-dealer", default-features = false}
 dex-manager = { path = "../pallets/dex-manager", default-features = false }
+dex-manager-runtime-api = { path = "../pallets/dex-manager/runtime-api", default-features = false }
+dex-api = { path = "../pallets/dex-api", default-features = false }
+dex-runtime-api = { path = "../pallets/dex-api/runtime-api", default-features = false }
 referral-system = { path = "../pallets/referral-system", default-features = false }
 xor-fee = { path = "../pallets/xor-fee", default-features = false }
 mock-liquidity-source = { path = "../pallets/mock-liquidity-source", default-features = false }
@@ -23,7 +26,6 @@ template = { package = "pallet-template", path = "../pallets/template", version 
 
 currencies = { package = "orml-currencies", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
 tokens = { package = "orml-tokens", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
-dex-api = { path = "../pallets/dex-api", default-features = false }
 
 # Substrate dependencies
 sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
@@ -108,12 +110,14 @@ std = [
 	"common/std",
 	"template/std",
 	"dex-manager/std",
+	"dex-manager-runtime-api/std",
+	"dex-api/std",
+	"dex-runtime-api/std",
 	"liquidity-proxy/std",
 	"mock-liquidity-source/std",
 	"currencies/std",
 	"tokens/std",
 	"assets/std",
-	"dex-api/std",
 	"permissions/std",
 ]
 
