--- a/pallets/liquidity-proxy/Cargo.toml
+++ b/pallets/liquidity-proxy/Cargo.toml
@@ -15,13 +15,14 @@ version = '1.3.1'
 [dependencies]
 frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-common = { path = "../../common", default-features = false }
 sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
+sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
+sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 currencies = { package = "orml-currencies", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
 tokens = { package = "orml-tokens", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
 traits = { package = "orml-traits", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
-sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
 pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
+common = { path = "../../common", default-features = false }
 assets = { path = "../assets", default-features = false }
 permissions = { path = "../permissions", default-features = false }
 dex-manager = { path = "../dex-manager", default-features = false }
@@ -30,7 +31,6 @@ trading-pair = { path = "../trading-pair", default-features = false }
 [dev-dependencies]
 sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 mock-liquidity-source = { path = "../mock-liquidity-source", default-features = false }
 dex-api = { path = "../dex-api", default-features = false }
 technical = { path = "../technical", default-features = false }
@@ -42,12 +42,15 @@ std = [
     'frame-support/std',
     'frame-system/std',
     'sp-std/std',
-    'common/std',
+    'sp-runtime/std',
+    'sp-arithmetic/std',
     'currencies/std',
     'tokens/std',
     'traits/std',
-    'dex-manager/std',
+    'pallet-balances/std',
+    'common/std',
     'assets/std',
     'permissions/std',
-    'mock-liquidity-source/std',
+    'dex-manager/std',
+    'trading-pair/std',
 ]
