--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -16,7 +16,7 @@ futures = { version = "0.3.1", features = ["compat"] }
 log = '0.4.8'
 parking_lot = '0.9.0'
 trie-root = '0.15.2'
-codec = { package = 'parity-scale-codec', version = '1.0.0' }
+codec = { package = 'parity-scale-codec', version = '1.3.1', features = ["derive"]}
 structopt = "0.3.3"
 ansi_term = "0.12.1"
 serde = { version = "1.0.101", features = ["derive"] }
@@ -24,6 +24,9 @@ common = { path = "../common" }
 jsonrpc-core = "14.0.3"
 dex-api-rpc = { path = "../pallets/dex-api/rpc" }
 dex-manager-rpc = { path = "../pallets/dex-manager/rpc" }
+technical = {path = "../pallets/technical" }
+permissions = {path = "../pallets/permissions" }
+xor-fee = {path = "../pallets/xor-fee"}
 
 # Parachain dependencies
 parachain-runtime = { path = "../runtime" }
@@ -34,7 +37,7 @@ sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-bran
 sp-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
 sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
 sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
-sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch"}
 sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
 sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
 sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
