--- a/pallets/technical/Cargo.toml
+++ b/pallets/technical/Cargo.toml
@@ -29,6 +29,7 @@ orml-traits = { branch = "rococo-branch", git = "https://github.com/vmarkushin/o
 currencies = { package = "orml-currencies", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
 twox-hash = { version = "1.5.0", default-features = false }
 sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
+serde = { version = "1.0.101", optional = true, features = ["derive"] }
 
 [dev-dependencies]
 sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
@@ -50,4 +51,5 @@ std = [
     'twox-hash/std',
     'sp-core/std',
     'sp-std/std',
+    'serde',
 ]
