--- a/pallets/xor-fee/Cargo.toml
+++ b/pallets/xor-fee/Cargo.toml
@@ -25,13 +25,22 @@ sp-std = { git = "https://github.com/paritytech/substrate", default-features = f
 sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 referral-system = { path = "../referral-system", default-features = false}
 pallet-transaction-payment = { git = "https://github.com/eadventurous/pallet-transaction-payment", default-features = false, branch = "rococo-branch"}
+common = { path = "../../common", default-features = false }
+assets = { path = "../assets", default-features = false }
+technical = { path = "../technical", default-features = false }
+sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
 
 [dev-dependencies]
 sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-common = { path = "../../common", default-features = false }
+permissions = { path = "../permissions", default-features = false }
+currencies = { package = "orml-currencies", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
+tokens = { package = "orml-tokens", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
+mock-liquidity-source = { path = "../mock-liquidity-source", default-features = false }
+dex-manager = { path = "../dex-manager", default-features = false }
+trading-pair = { path = "../trading-pair", default-features = false }
 
 [features]
 default = ['std']
@@ -40,10 +49,12 @@ std = [
     'traits/std',
     'sp-std/std',
     'sp-runtime/std',
+    'sp-arithmetic/std',
     'pallet-transaction-payment/std',
     'pallet-balances/std',
     'referral-system/std',
     'frame-support/std',
     'frame-system/std',
     'common/std',
+    'technical/std',
 ]
