--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -20,6 +20,7 @@ codec = { package = 'parity-scale-codec', version = '1.3.1', features = ["derive
 structopt = "0.3.3"
 ansi_term = "0.12.1"
 serde = { version = "1.0.101", features = ["derive"] }
+serde_json = "1.0.41"
 common = { path = "../common" }
 jsonrpc-core = "14.0.3"
 dex-api-rpc = { path = "../pallets/dex-api/rpc" }
