--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -13,6 +13,7 @@ path = 'src/main.rs'
 derive_more = '0.15.0'
 exit-future = '0.1.4'
 futures = { version = "0.3.1", features = ["compat"] }
+hex-literal = "0.3.1"
 log = '0.4.8'
 parking_lot = '0.9.0'
 trie-root = '0.15.2'
@@ -20,7 +21,6 @@ codec = { package = 'parity-scale-codec', version = '1.3.1', features = ["derive
 structopt = "0.3.3"
 ansi_term = "0.12.1"
 serde = { version = "1.0.101", features = ["derive"] }
-serde_json = "1.0.41"
 common = { path = "../common" }
 jsonrpc-core = "14.0.3"
 dex-api-rpc = { path = "../pallets/dex-api/rpc" }
@@ -59,6 +59,7 @@ sp-trie = { git = "https://github.com/paritytech/substrate", branch = "rococo-br
 sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
 sc-informant = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
 sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
+frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
 
 # Cumulus dependencies
 cumulus-consensus = { git = "https://github.com/paritytech/cumulus", rev = '96da14c14fb785e106bb89a18c9dedaf2f789d2c' }
