--- a/ethereum/java-wrapper/build.gradle
+++ b/ethereum/java-wrapper/build.gradle
@@ -1,26 +1,25 @@
 plugins {
     id 'java'
-    id 'idea'
 }
 
 group 'net.sora'
-version '1.0-SNAPSHOT'
+version '0.1.0'
 
-sourceCompatibility = 11
-targetCompatibility = 11
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
-    jcenter()
+}
+
+ext {
+    web3jVersion = '4.5.16'
+    logbackVersion = '1.2.3'
+    junitVersion = '4.12'
 }
 
 dependencies {
-    compile 'org.web3j:core:5.0.0'
-
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-}
-
-test {
-    useJUnitPlatform()
+    implementation "org.web3j:core:$web3jVersion",
+            "ch.qos.logback:logback-core:$logbackVersion",
+            "ch.qos.logback:logback-classic:$logbackVersion"
+    testImplementation "junit:junit:$junitVersion"
 }
