--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -5,9 +5,8 @@ authors = ["Vladislav Markushin <negigic@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-byteorder = "1.3.4"
 codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
-serde = { version = "1.0", optional = true }
+serde = { version = "1.0", features = ["derive"], optional = true }
 static_assertions = "1.1.0"
 rustc-hex = { version = "2.1.0", default-features = false }
 smallvec = "1.5.0"
@@ -22,7 +21,7 @@ sp-std = { version = "2.0.0", default-features = false }
 currencies = { version = "0.3.2", package = "orml-currencies", default-features = false }
 orml-traits = { version = "0.3.2", package = "orml-traits", default-features = false }
 derive_more = { version = "0.99.11", default-features = false }
-fixnum = { version = "0.2.2", default-features = false, features = ["i128"] }
+fixnum = { git = "https://github.com/quasiyoke/fixnum", branch = "feature/parity-compact-as", default-features = false, features = ["i128", "parity"] }
 
 [dev-dependencies]
 serde_json = "1.0.41"
@@ -37,6 +36,7 @@ std = [
     'num-traits/std',
     'frame-support/std',
     'frame-system/std',
+    'fixnum/serde',
     'fixnum/std',
     'sp-core/std',
     'sp-runtime/std',
