--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -39,6 +39,7 @@ framenode-runtime = { path = "../runtime" }
 
 # Substrate dependencies
 sp-runtime = { version = "2.0.0", default-features = false }
+sp-arithmetic = { version = "2.0.0", default-features = false }
 sp-io = { version = "2.0.0", default-features = false }
 sp-api = { version = "2.0.0", default-features = false }
 sp-block-builder = { version = "2.0.0", default-features = false }
