--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -21,6 +21,7 @@ codec = { package = 'parity-scale-codec', version = '1.3.1', features = ["derive
 structopt = "0.3.3"
 ansi_term = "0.12.1"
 serde = { version = "1.0.101", features = ["derive"] }
+serde_json = "1.0.61"
 common = { path = "../common" }
 jsonrpc-core = "15.0.0"
 dex-api-rpc = { path = "../pallets/dex-api/rpc" }
@@ -34,6 +35,7 @@ assets-rpc = { path = "../pallets/assets/rpc" }
 liquidity-proxy-rpc = { path = "../pallets/liquidity-proxy/rpc" }
 multisig = { git = "https://github.com/soramitsu/sora2-frame-pallets.git", branch = "vmarkushin/multisig", package = "pallet-multisig" }
 farming-rpc = { path = "../pallets/farming/rpc" }
+libsecp256k1 = { version = "0.3.5", features = ['hmac'], default-features = false }
 
 # Parachain dependencies
 framenode-runtime = { path = "../runtime" }
@@ -82,7 +84,6 @@ substrate-build-script-utils = { version = "2.0.0", default-features = false }
 [dev-dependencies]
 assert_cmd = "0.12"
 nix = "0.17"
-rand = "0.7.3"
 tokio = { version = "0.2.13", features = ["macros"] }
 
 # Substrate dependencies
