--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -21,7 +21,7 @@ sp-std = { version = "2.0.0", default-features = false }
 currencies = { version = "0.3.2", package = "orml-currencies", default-features = false }
 orml-traits = { version = "0.3.2", package = "orml-traits", default-features = false }
 derive_more = { version = "0.99.11", default-features = false }
-fixnum = { git = "https://github.com/quasiyoke/fixnum", branch = "feature/parity-compact-as", default-features = false, features = ["i128", "parity"] }
+fixnum = { version = "0.2.3", default-features = false, features = ["i128", "parity"] }
 
 [dev-dependencies]
 serde_json = "1.0.41"
