--- a/pallets/trading-pair/Cargo.toml
+++ b/pallets/trading-pair/Cargo.toml
@@ -20,12 +20,12 @@ currencies = { version = "0.3.2", package = "orml-currencies", default-features 
 tokens = { version = "0.3.2", package = "orml-tokens", default-features = false }
 traits = { version = "0.3.2", package = "orml-traits", default-features = false }
 hex-literal = { version = "0.3.1", optional = true }
+dex-manager = { path = "../dex-manager", default-features = false }
 
 [dev-dependencies]
 sp-runtime = { version = "2.0.0", default-features = false }
 pallet-balances = { version = "2.0.0", default-features = false }
 permissions = { path = "../permissions", default-features = false }
-dex-manager = { path = "../dex-manager", default-features = false }
 
 [features]
 default = ['std']
@@ -41,11 +41,11 @@ std = [
     'currencies/std',
     'tokens/std',
     'traits/std',
+    'dex-manager/std',
 ]
 runtime-benchmarks = [
     "frame-benchmarking",
     "frame-system/runtime-benchmarks",
     "frame-support/runtime-benchmarks",
-
     "hex-literal",
 ]
