--- a/pallets/trading-pair/Cargo.toml
+++ b/pallets/trading-pair/Cargo.toml
@@ -8,6 +8,7 @@ targets = ['x86_64-unknown-linux-gnu']
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
+serde = { version = "1.0.101", optional = true, features = ["derive"], default-features = false }
 frame-benchmarking = { version = "2.0.0", default-features = false, optional = true }
 frame-support = { version = "2.0.0", default-features = false }
 frame-system = { version = "2.0.0", default-features = false }
@@ -31,6 +32,7 @@ permissions = { path = "../permissions", default-features = false }
 default = ['std']
 std = [
     'codec/std',
+    'serde/std',
     'frame-support/std',
     'frame-system/std',
     'sp-std/std',
