--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
+    "rust-analyzer.procMacro.enable": true,
+    "rust-analyzer.cargo.loadOutDirsFromCheck": true,
+    "rust-analyzer.server.extraEnv": {
+        "SKIP_WASM_BUILD": "true"
+    },
     "rust-analyzer.checkOnSave.allTargets": false,
     "rust-analyzer.checkOnSave.extraArgs": [
         "--lib",
@@ -6,5 +11,8 @@
     ],
     "rust-analyzer.checkOnSave.overrideCommand": [
         "./check"
-    ]
+    ],
+    "rust-analyzer.diagnostics.disabled": [
+        "macro-error"
+    ],
 }
