--- a/pallets/iroha-migration/Cargo.toml
+++ b/pallets/iroha-migration/Cargo.toml
@@ -14,14 +14,16 @@ hex = { version = "0.4.2", default-features = false }
 serde = { version = "1.0.101", default-features = false, optional = true, features = ["derive"] }
 sha3 = { version = "0.9.1", default-features = false }
 sp-std = { version = "2.0.0", default-features = false }
+
+# Git dependencies
 multisig = { git = "https://github.com/soramitsu/sora2-frame-pallets.git", branch = "vmarkushin/multisig", package = "pallet-multisig", default-features = false }
+ed25519-dalek-iroha = { git = "https://github.com/soramitsu/sora2-ed25519-dalek-iroha.git", branch = "develop", default-features = false, features = ["u64_backend"] }
 
 # Path dependencies
 assets = { path = "../assets", default-features = false }
 referral-system = { path = "../referral-system", default-features = false }
 technical = { path = "../technical", default-features = false }
 common = { path = "../../common", default-features = false }
-ed25519-dalek-iroha = { git = "https://github.com/soramitsu/sora2-ed25519-dalek-iroha.git", branch = "develop", default-features = false, features = ["u64_backend"] }
 
 [dev-dependencies]
 sp-core = { version = "2.0.0", default-features = false }
