--- a/pallets/liquidity-proxy/Cargo.toml
+++ b/pallets/liquidity-proxy/Cargo.toml
@@ -23,9 +23,9 @@ assets = { path = "../assets", default-features = false }
 [dev-dependencies]
 sp-core = { version = "2.0.0", default-features = false }
 sp-io = { version = "2.0.0", default-features = false }
-dex-api = { path = "../dex-api", default-features = false }
+dex-api = { path = "../dex-api" }
 dex-manager = { path = "../dex-manager", default-features = false }
-mock-liquidity-source = { path = "../mock-liquidity-source", default-features = false }
+mock-liquidity-source = { path = "../mock-liquidity-source" }
 trading-pair = { path = "../trading-pair", default-features = false }
 technical = { path = "../technical", default-features = false }
 permissions = { path = "../permissions", default-features = false }
