--- a/pallets/farming/Cargo.toml
+++ b/pallets/farming/Cargo.toml
@@ -58,6 +58,5 @@ runtime-benchmarks = [
     "frame-benchmarking",
     "frame-system/runtime-benchmarks",
     "frame-support/runtime-benchmarks",
-
-    "hex-literal"
+    "hex-literal",
 ]
