--- a/pallets/eth-bridge/Cargo.toml
+++ b/pallets/eth-bridge/Cargo.toml
@@ -19,7 +19,7 @@ serde_json = { version = "1", default-features = false, git = "https://github.co
 common = { path = "../../common", default-features = false }
 assets = { path = "../assets", default-features = false }
 serde = { version = "1.0.101", optional = true, features = ["derive"], default-features = false }
-multisig = { git = "https://github.com/soramitsu/sora2-frame-pallets.git", branch = "vmarkushin/multisig", package = "pallet-multisig", default-features = false }
+bridge-multisig = { git = "https://github.com/soramitsu/sora2-frame-pallets.git", branch = "selected-v2.0.0", package = "pallet-multisig", default-features = false }
 libsecp256k1 = { version = "0.3.5", features = ['hmac'], default-features = false }
 tiny-keccak = { version = "2", default-features = false }
 hex-literal = "0.3.1"
@@ -53,7 +53,7 @@ std = [
     'codec/std',
     'frame-support/std',
     'frame-system/std',
-    'multisig/std',
+    'bridge-multisig/std',
     'assets/std',
     'sp-std/std',
     'sp-core/std',
