--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -34,7 +34,7 @@ trading-pair-runtime-api = { path = "../pallets/trading-pair/runtime-api", defau
 assets-runtime-api = { path = "../pallets/assets/runtime-api", default-features = false}
 liquidity-proxy-runtime-api = { path = "../pallets/liquidity-proxy/runtime-api", default-features = false}
 eth-bridge = { path = "../pallets/eth-bridge", default-features = false }
-multisig = { git = "https://github.com/soramitsu/sora2-frame-pallets.git", branch = "vmarkushin/multisig", package = "pallet-multisig", default-features = false }
+bridge-multisig = { git = "https://github.com/soramitsu/sora2-frame-pallets.git", branch = "selected-v2.0.0", package = "pallet-multisig", default-features = false }
 farming-runtime-api = { path = "../pallets/farming/runtime-api", default-features = false}
 pswap-distribution = { path = "../pallets/pswap-distribution", default-features = false }
 liquidity-proxy-benchmarking = { path = "../pallets/liquidity-proxy/benchmarking", default-features = false, optional = true }
@@ -129,7 +129,7 @@ std = [
     'faucet/std',
     'liquidity-proxy/std',
     'mock-liquidity-source/std',
-    'multisig/std',
+    'bridge-multisig/std',
     'permissions/std',
     'pool-xyk/std',
     'referral-system/std',
