--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -6,18 +6,18 @@ edition = "2018"
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
-serde = { version = "1.0", features = ["derive"], optional = true }
+serde = { version = "1.0", features = ["derive"], optional = true, default-features = false }
 static_assertions = "1.1.0"
 rustc-hex = { version = "2.1.0", default-features = false }
 smallvec = "1.5.0"
 blake2-rfc = { version = "0.2.18", default-features = false }
 num-traits = { version = "0.2.12", default-features = false }
-frame-support = { version = "2.0.0", default-features = false }
-frame-system = { version = "2.0.0", default-features = false }
-sp-arithmetic = { version = "2.0.0", default-features = false }
-sp-core = { version = "2.0.0", default-features = false }
-sp-runtime = { version = "2.0.0", default-features = false }
-sp-std = { version = "2.0.0", default-features = false }
+frame-support = { version = "2.0", default-features = false }
+frame-system = { version = "2.0", default-features = false }
+sp-arithmetic = { version = "2.0", default-features = false }
+sp-core = { version = "2.0", default-features = false }
+sp-runtime = { version = "2.0", default-features = false }
+sp-std = { version = "2.0", default-features = false }
 currencies = { version = "0.3.2", package = "orml-currencies", default-features = false }
 orml-traits = { version = "0.3.2", package = "orml-traits", default-features = false }
 derive_more = { version = "0.99.11", default-features = false }
