--- a/pallets/eth-bridge/Cargo.toml
+++ b/pallets/eth-bridge/Cargo.toml
@@ -9,9 +9,11 @@ frame-support = { version = "2.0.0", default-features = false }
 frame-system = { version = "2.0.0", default-features = false }
 sp-std = { version = "2.0.0", default-features = false }
 sp-core = { version = "2.0.0", default-features = false }
-ethereum-types = {git = "https://github.com/vmarkushin/parity-common.git", branch = "no-std", package = "ethereum-types", default-features = false, features = ['serialize_no_std', 'codec'] }
+ethereum-types = { git = "https://github.com/vmarkushin/parity-common.git", branch = "no-std", package = "ethereum-types", default-features = false, features = ['serialize_no_std', 'codec'] }
 ethabi = { git = "https://github.com/vmarkushin/ethabi.git", branch = "no-std", package = "ethabi", default-features = false }
-jsonrpc-core = { git = "https://github.com/vmarkushin/jsonrpc.git", branch = "no-std", package = "jsonrpc-core", default-features = false }
+ethabi-contract = { version = "11.0.0", default-features = false, git = "https://github.com/vmarkushin/ethabi.git", branch = "no-std", package = "ethabi-contract" }
+ethabi-derive = { version = "13.0.0", default-features = false, git = "https://github.com/vmarkushin/ethabi.git", branch = "no-std", package = "ethabi-derive" }
+jsonrpc-core = { version = "17.0.0", default-features = false, git = "https://github.com/vmarkushin/jsonrpc.git", branch = "no-std", package = "jsonrpc-core" }
 rlp = { version = "0.4.6", default-features = false }
 rustc-hex = { version = "2.1.0", default-features = false }
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
@@ -22,6 +24,7 @@ bridge-multisig = { git = "https://github.com/soramitsu/sora2-frame-pallets.git"
 libsecp256k1 = { version = "0.3.5", features = ['hmac'], default-features = false }
 tiny-keccak = { version = "2", default-features = false }
 hex-literal = "0.3.1"
+once_cell = { version = "1.5.2", default-features = false }
 
 [dev-dependencies]
 parking_lot = "0.10.0"
