--- a/pallets/assets/Cargo.toml
+++ b/pallets/assets/Cargo.toml
@@ -14,6 +14,7 @@ frame-support = { version = "2.0.0", default-features = false }
 frame-system = { version = "2.0.0", default-features = false }
 sp-core = { version = "2.0.0", default-features = false }
 sp-std = { version = "2.0.0", default-features = false }
+sp-runtime = { version = "2.0.0", default-features = false }
 tiny-keccak = { version = "2.0.1", features = ["keccak"] }
 currencies = { version = "0.3.2", package = "orml-currencies", default-features = false }
 tokens = { version = "0.3.2", package = "orml-tokens", default-features = false }
@@ -25,7 +26,6 @@ hex-literal = "0.3.1"
 [dev-dependencies]
 pallet-balances = { version = "2.0.0", default-features = false }
 sp-io = { version = "2.0.0", default-features = false }
-sp-runtime = { version = "2.0.0", default-features = false }
 
 [features]
 default = ['std']
@@ -36,6 +36,7 @@ std = [
     'frame-system/std',
     'sp-core/std',
     'sp-std/std',
+    'sp-runtime/std',
     'currencies/std',
     'tokens/std',
     'traits/std',
