--- a/pallets/eth-bridge/Cargo.toml
+++ b/pallets/eth-bridge/Cargo.toml
@@ -24,7 +24,7 @@ bridge-multisig = { git = "https://github.com/soramitsu/sora2-frame-pallets.git"
 libsecp256k1 = { version = "0.3.5", features = ['hmac'], default-features = false }
 tiny-keccak = { version = "2", default-features = false }
 hex-literal = "0.3.1"
-once_cell = { version = "1.5.2", default-features = false }
+once_cell = { version = "1.5.2", default-features = false, features = ['alloc', 'unstable'] }
 permissions = { path = "../permissions", default-features = false }
 
 [dev-dependencies]
