--- a/pallets/ceres-liquidity-locker/testing/Cargo.toml
+++ b/pallets/ceres-liquidity-locker/testing/Cargo.toml
@@ -12,6 +12,7 @@ edition = "2018"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
+ceres-liquidity-locker = { path = "../../ceres-liquidity-locker" }
 codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
 frame-benchmarking = { version = "3", default-features = false, optional = true }
 frame-support = { version = "3", default-features = false }
@@ -26,7 +27,6 @@ hex-literal = "0.3.1"
 
 [dev-dependencies]
 assets = { path = "../../assets" }
-ceres-liquidity-locker = { path = "../." }
 common = { path = "../../../common", features = ["test"] }
 currencies = { version = "0.4", package = "orml-currencies", default-features = false }
 dex-manager = { path = "../../dex-manager", default-features = false }
