--- a/primitives/ethereum/Cargo.toml
+++ b/primitives/ethereum/Cargo.toml
@@ -11,7 +11,11 @@ codec = { package = "parity-scale-codec", version = "2.0.0", default-features = 
 scale-info = { version = "1.0.0", default-features = false, features = [
     "derive",
 ] }
-ethbloom = { version = "0.11.0", default-features = false }
+ethbloom = { version = "0.11.1", default-features = false, features = [
+	"codec",
+	"rlp",
+	"serialize",
+] }
 ethereum-types = { version = "0.12.1", default-features = false, features = [
 	"codec",
 	"rlp",
@@ -23,7 +27,6 @@ libsecp256k1 = { version = "0.3", default-features = false }
 parity-bytes = { version = "0.1.2", default-features = false }
 rlp = { version = "0.5", default-features = false }
 serde = { version = "1.0.101", optional = true }
-serde-big-array = { version = "0.2", optional = true }
 getrandom = { version = "0.2.1", features = ["js"] }
 
 sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
@@ -46,7 +49,6 @@ default = ["std"]
 expensive_tests = []
 std = [
 	"serde",
-	"serde-big-array",
 	"codec/std",
     "scale-info/std",
 	"ethabi/std",
