--- a/pallets/ceres-governance-platform/Cargo.toml
+++ b/pallets/ceres-governance-platform/Cargo.toml
@@ -34,7 +34,7 @@ dex-manager = { path = "../dex-manager", default-features = false }
 ceres-governance-platform = { path = ".", default-features = false }
 pallet-balances = { version = "3", default-features = false }
 sp-io = { version = "3", default-features = false }
-orml-tokens = { version = "0.4", package = "orml-tokens", default-features = false }
+tokens = { version = "0.4", package = "orml-tokens", default-features = false }
 orml-traits = { version = "0.4", package = "orml-traits", default-features = false }
 permissions = { path = "../permissions" }
 pool-xyk = { path = "../pool-xyk", default-features = false }
